--- a/Fun/src/app/pages/landing/landing.component.html
+++ b/Fun/src/app/pages/landing/landing.component.html
@@ -1,3 +1,16 @@
+<!-- <div class="imgdiv">  
+ <img src="https://bod-cms-assets.prod.cd.beachbodyondemand.com/bod-cms/wp-content/uploads/2020/06/12113812/BYS_hero_mobile-1.jpg" class="img1" alt="cinque terre">  
+</div>     -->
 <div class="bg">
-    <img url="https://files.ekmcdn.com/75256c/images/harbour-mist-scented-wax-melts-fresh-floral-fragrance.-295-p.jpg?v=e50e95aa-cb5f-4805-914f-f088fc78b6d6">
+    <img src="https://yogapractice.com/wp-content/uploads/2019/03/10-Ways-Yoga-Will-Change-You.png" alt="">
+    <div class="centered">
+       
+        <!-- <div class="logo">
+        <img src = "https://i0.wp.com/blissyoga.be/wp-content/uploads/2021/01/cropped-logo_horizontal2-klein.jpg?fit=514%2C298&ssl=1">
+        </div> -->
+        <h1>Bliss Yoga</h1>
+
+    </div>
+    <p>Get fit, stronger and embrace a healthier lifestyle </p>
+    <button class="btn"><a href="#">Get Started</a></button>
 </div>
