--- a/Fun/src/app/pages/landing/landing.component.scss
+++ b/Fun/src/app/pages/landing/landing.component.scss
@@ -1,16 +1,79 @@
-body,html {
-  height: 100%;
+.bg {
+  position: fixed; 
+  top: -50%; 
+  left: -50%; 
+  width: 200%; 
+  height: 200%;
+
+  p{
+    position: absolute;
+    top: 68%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: larger;
+    font-weight: bolder;
+    color:ghostwhite;
+    }
+}
+.bg img {
+  position: absolute; 
+  top: 0; 
+  left: 0; 
+  right: 0; 
+  bottom: 0; 
+  margin: auto; 
+  min-width: 50%;
+  min-height: 50%;
 }
 
-.bg {
-   
-  /* The image used */
-  background-image: url("https://files.ekmcdn.com/75256c/images/harbour-mist-scented-wax-melts-fresh-floral-fragrance.-295-p.jpg?v=e50e95aa-cb5f-4805-914f-f088fc78b6d6");
-  /* Full height */
-  height: 100%;
+.bg .btn {
+  position: absolute;
+  top: 72%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  background-color: rgb(113, 69, 149);
+  color: rgba(255, 255, 255, 0.843);
+  font-size: 24px;
+  padding: 16px 80px;
+  border: none;
+  cursor: pointer;
+  border-radius: 16px;
+  text-align: center;
 
-  /* Center and scale the image nicely */
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
+  a{
+    text-decoration: none;
+    color: rgba(255, 255, 255, 0.843);
+  }
+}
+
+.bg .btn:hover {
+  background-color: rgba(0, 0, 0, 0.436);
+}
+
+// @media (min-width: 575px) {
+//   .bg {
+//     width: 550px;
+//     margin-left: auto;
+//     margin-right: auto;
+//   }
+// }
+
+.centered h1{
+  position: absolute;
+  top: 28%;
+  left: 30%;
+  transform: translate(-50%, -50%);
+  font-size: xx-large;
+  font-style: italic;
+ 
+}
+
+.centered .logo {
+  // background: url("https://i0.wp.com/blissyoga.be/wp-content/uploads/2021/01/cropped-logo_horizontal2-klein.jpg?fit=514%2C298&ssl=1");
+  padding: 0px;
+  margin: 0px;
+  width: 150px;
+  height: 50px;
 }
