--- a/Fun/src/app/pages/landing/landing.component.html
+++ b/Fun/src/app/pages/landing/landing.component.html
@@ -2,15 +2,14 @@
  <img src="https://bod-cms-assets.prod.cd.beachbodyondemand.com/bod-cms/wp-content/uploads/2020/06/12113812/BYS_hero_mobile-1.jpg" class="img1" alt="cinque terre">  
 </div>     -->
 <div class="bg">
+   
     <img src="https://yogapractice.com/wp-content/uploads/2019/03/10-Ways-Yoga-Will-Change-You.png" alt="">
+
     <div class="centered">
-       
-        <!-- <div class="logo">
-        <img src = "https://i0.wp.com/blissyoga.be/wp-content/uploads/2021/01/cropped-logo_horizontal2-klein.jpg?fit=514%2C298&ssl=1">
-        </div> -->
-        <h1>Bliss Yoga</h1>
+        <!-- <img class = "logo" src="/././assets/logo.png" width="8" height="8" class="d-inline-block align-bottom" alt=""> -->
+        <img src="/././assets/logo.png" width="80" height="80" class="d-inline-block align-bottom" alt="" ><h1>Bliss Yoga</h1>
 
     </div>
     <p>Get fit, stronger and embrace a healthier lifestyle </p>
-    <button class="btn"><a href="#">Get Started</a></button>
+    <button class="btn"><a href="register">Get Started</a></button>
 </div>
