--- a/Fun/src/app/pages/landing/landing.component.html
+++ b/Fun/src/app/pages/landing/landing.component.html
@@ -5,11 +5,11 @@
    
     <img src="https://yogapractice.com/wp-content/uploads/2019/03/10-Ways-Yoga-Will-Change-You.png" alt="">
 
-    <div class="centered">
-        <!-- <img class = "logo" src="/././assets/logo.png" width="8" height="8" class="d-inline-block align-bottom" alt=""> -->
+    <!-- <div class="centered">
+        
         <img src="/././assets/logo.png" width="80" height="80" class="d-inline-block align-bottom" alt="" ><h1>Bliss Yoga</h1>
 
-    </div>
+    </div> -->
     <p>Get fit, stronger and embrace a healthier lifestyle </p>
     <button class="btn"><a href="register">Get Started</a></button>
 </div>
