--- a/Fun/src/app/pages/register/register.component.html
+++ b/Fun/src/app/pages/register/register.component.html
@@ -1,3 +1,4 @@
+
 <div class="bg-img">
     <br/>
   
@@ -38,16 +39,16 @@
       </div>
   
       <!-- Contact Number -->
-      <div class="box">
+      <!-- <div class="box">
         <label for="cellNumber">Contact number:</label>
         <input type="text" id="cellNumber" formControlName="cellNumber" />
-        <!-- Validation messages for Contact Number -->
+   
         <div *ngIf="form.get('cellNumber')?.invalid && (form.get('cellNumber')?.dirty || form.get('cellNumber')?.touched)"
           class="mt-3">
           <div *ngIf="form.get('cellNumber')?.errors?.['required']" class="error">Contact number is required.</div>
           <div *ngIf="form.get('cellNumber')?.errors?.['pattern']" class="error">Invalid Contact number number format.</div>
         </div>
-      </div>
+      </div> -->
   
       <!-- Password -->
       <div class="box">
@@ -74,18 +75,20 @@
       </div>
   
       <!-- Submit Button -->
-      <button type="submit" [disabled]="form"><a>Submit</a></button>
+      <button type="submit" [disabled]="form" ><a routerLink="/home">Submit</a></button>
       
       <!-- Error Message -->
-      <div class="alert alert-danger" role="alert" *ngIf="result && isFailed">
+      <!-- <div class="alert alert-danger" role="alert" *ngIf="result && isFailed">
         User Already registered!
-      </div>
+      </div> -->
       <!-- Success Message -->
-      <div class="alert alert-success" role="alert" *ngIf="result && !isFailed">
+      <!-- <div class="alert alert-success" role="alert" *ngIf="result && !isFailed">
         User successfully registered! <a class="anchor" routerLink="/login">Login here</a>
-      </div>
+      </div> -->
       <!-- Login Link -->
-      <p>Already have an account? <a href="login" class="anchor">Login</a></p>
+      <!-- <p>Already have an account? <a href="login" class="anchor">Login</a></p> -->
     </form>
   </div>
   
+
+  <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/WG4p3Iwle1Q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe> -->
