--- a/Fun/src/app/pages/home/home.component.scss
+++ b/Fun/src/app/pages/home/home.component.scss
@@ -1,145 +1,173 @@
-.image{
-//    max-width:100%; /*width of your image*/
-//    height:100px; /*height of your image*/
-   margin:0; 
-   padding:0; 
-   justify-content: center;
-   align-items: center;
-   object-fit: cover;
-   
-   p{
+.image {
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+  display: inline-block;
+  position: relative;
+  width: 50rem;
+  height: 50rem;
+  overflow: hidden;
+  //border-radius: 50%;
+  margin-left: 25px;
+  justify-content: center;
+  object-fit: fill;
+  //  .circular--landscape img { width: auto; height: 100%; margin-left: -50px; }
+
+
+  p {
     position: absolute;
     top: 68%;
     left: 50%;
     font-style: Papyrus;
     transform: translate(-50%, -50%);
-    font-family:fantasy;
+    font-family: fantasy;
     font-size: larger;
     font-weight: bolder;
-    color:rgba(248, 248, 255, 0.546);
-    
-   }
+    color: rgba(248, 248, 255, 0.546);
+  }
 }
 
+.image img{
+    width: 50rem;
+    height: 50rem;
+    border-radius: 25rem;
+  }
+
+
+
+.image-space{
+    background-color:#7171713a;
+    width: 100%;
+}
 /* The dots/indicators */
 .dot {
-    cursor: pointer;
-    height: 15px;
-    width: 15px;
-    margin: 0 2px;
-    background-color: #bbb;
-    border-radius: 50%;
-    display: inline-block;
-    transition: background-color 0.6s ease;
-  }
-  
-  .imageCover {
-    height: 400px;
-    width: 95%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 6px;
-    border-radius: 10px;
-  
-    background-color: rgba(113, 175, 79, 0.301);
-  }
-  
-  .centered {
-    background-color: #BEBEBE;
-    padding: 40px 50px;
-    font-size: xx-large;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    background-color: rgba(0, 0, 0, 0.5);
-    color: white;
-    text-shadow: 2px 2px white;
-  }
-  
-  .active,
-  .dot:hover {
-    background-color: #717171;
-  }
-  
-  .container {
-    margin: 0 auto;
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(4, 1fr);
-    align-items: center;
-    justify-content: center;
-    margin-top: 2rem;
-    gap: 10px !important;
-    width: 60%;
-  
-  }
-  
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.imageCover {
+  height: 400px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 6px;
+  border-radius: 10px;
+
+  background-color: rgba(113, 175, 79, 0.301);
+}
+
+.centered {
+  background-color: #bebebe;
+  padding: 40px 50px;
+  font-size: xx-large;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  background-color: rgba(0, 0, 0, 0.5);
+  color: white;
+  text-shadow: 2px 2px white;
+}
+
+.active,
+.dot:hover {
+  background-color: #717171;
+}
+
+.container {
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(4, 1fr);
+  align-items: center;
+  justify-content: center;
+  margin-top: 2rem;
+  gap: 10px !important;
+  width: 60%;
+}
+
 //   .btn {
 //     background-color: rgb(113, 175, 79);
 //     border: none;
 //   }
-  
-  a:not([href]):not([tabindex]) {
-    color: white;
-    text-decoration: none;
+
+a:not([href]):not([tabindex]) {
+  color: white;
+  text-decoration: none;
+}
+
+a:not([href]):not([tabindex]):hover {
+  color: black;
+}
+
+.topImage {
+  margin: 0 auto;
+  margin-top: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: url("https://images.ctfassets.net/lufu0clouua1/1fP5K0BIp8602ypZxr3q7C/1eb3b32ec5fc6a62ea14f0998e6bee9b/Breakfast_9093_rfr.jpg");
+  background-size: cover;
+  height: 500px;
+  width: 100%;
+  border-radius: 10px;
+  box-shadow: 0px 10px 36px rgba(0, 0, 0, 0.281);
+}
+
+.card {
+  align-items: center;
+  padding: 10px;
+  height: 450px;
+  width: 80px;
+  // box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.card-img-top {
+  height: 150px;
+  width: 180px;
+}
+
+.badgeBtn {
+  color: white;
+  background-color: red;
+  border-radius: 50px;
+  width: 11rem;
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+:host {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.row {
+  background-color: #abaaaa2b;
+  padding-top: 2%;
+  // width: 100%;
+  border-radius: none;
+  padding-left: 10px;
+  // height: 30%;
+  display: flex;
+  border: 0rem;
+  position: relative;
+  grid-template-columns: auto;
+
+  .card .name {
+    font-size: x-large;
+    font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
+      sans-serif;
+    color: #717171;
   }
-  
-  a:not([href]):not([tabindex]):hover {
-    color: black;
+  .card a {
+    color: #717171;
+    font-size: larger;
   }
-  
-  .topImage {
-    margin: 0 auto;
-    margin-top: 100px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: url('https://images.ctfassets.net/lufu0clouua1/1fP5K0BIp8602ypZxr3q7C/1eb3b32ec5fc6a62ea14f0998e6bee9b/Breakfast_9093_rfr.jpg');
-    background-size: cover;
-    height: 500px;
-    width: 100%;
-    border-radius: 10px;
-    box-shadow: 0px 10px 36px rgba(0, 0, 0, 0.281);
+  .card .card-body {
+    background-color: rgba(139, 179, 181, 0.585);
   }
-  
-  .card {
-    align-items: center;
-    padding: 10px;
-    height: 450px;
-    // box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  
-  }
-  
-  .card-img-top {
-    height: 150px;
-    width: 180px;
-  }
-  
-  .badgeBtn {
-    color: white;
-    background-color: red;
-    border-radius: 50px;
-    width: 11rem;
-    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  
-  }
-  
-  :host {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-  }
-  
-  .ribbon {
-    position: absolute;
-    inset: 0 auto auto 0;
-    background: #ff9800;
-    transform-origin: 100% 0;
-    transform: translate(-29.3%) rotate(-45deg);
-    // box-shadow: 0 0 0 999px #08769b;
-    clip-path: inset(0 -100%);
-    color: white;
-    border-radius: 50px;
-    width: 5rem;
-    padding: 2px;
-    padding-left: 4px;
-  }
+}
