--- a/Fun/src/app/pages/home/home.component.html
+++ b/Fun/src/app/pages/home/home.component.html
@@ -1,7 +1,14 @@
  <div class="image-space">
  <div class = "image">
-    <img src = "https://images.unsplash.com/photo-1599447332712-112c3d0cefb4?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1yZWxhdGVkfDExfHx8ZW58MHx8fHx8&w=1000&q=80">
-    <p>- MAKE YOURSELF BETTER</p>
+    <img src = "https://www.shape.com/thmb/-qCHiZQXESlbwf4eLEd3zSp_oQQ=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc()/Gallery-Morning-Yoga-madison-lavern-CDJCAcAAPlU-unsplash-2000-6e332c6b5b0b4ce5acbc80c9ed75302f.jpg">
+    <h1>YOGA EXERCISES</h1>
+    <p>
+        Let your stress stretched out through yoga!
+
+        Practice daily and add many happy years to your life.
+
+        Develop a balance among your body, mind and soul.
+    </p>
  </div>
 </div>
  <div class="row" width="100%" height="30%">
