--- a/Fun/src/app/pages/register/register.component.scss
+++ b/Fun/src/app/pages/register/register.component.scss
@@ -9,7 +9,7 @@
     max-width: 600px;
     margin: auto;
     padding: 50px;
-    margin-top: 12%;
+    margin-top: 5%;
     border-radius: 10px;
     background:rgba(18, 18, 18, 0.505);
     // box-shadow: 5px 5px 0 5px rgba(121, 133, 127, 0.3);
@@ -74,7 +74,7 @@
   }
   
   [type="submit"] {
-    background: rgb(113, 69, 149);
+    background: rgb(70, 147, 148);
     color: rgb(0, 0, 0);
     border: none;
     border-radius: 5px;
@@ -88,7 +88,7 @@
     margin-top: 10px;
     a{
         text-decoration: none;
-        color: black;
+        color: white;
         font-size: x-large;
         font: bolder;
     }
