--- a/Fun/src/app/pages/register/register.component.html
+++ b/Fun/src/app/pages/register/register.component.html
@@ -75,8 +75,9 @@
       </div>
   
       <!-- Submit Button -->
-      <button type="submit" [disabled]="form" ><a routerLink="/home">Submit</a></button>
-
+      <button type="submit" [disabled]="form?.invalid" ><a routerLink="/login">Submit</a></button>
+     <!-- Login Link -->
+    <p>Already have an account? <a href="login" class="anchor">Login</a></p>
     </form>
   </div>
   
